src/objects/Transaction__c.object
<CustomObject>
    <fields>
        <fullName>AccountAuthorisationCode__c</fullName>
        <description>This field contains the auth code to reconcile if the Account number input by the presenter is authorised.</description>
        <inlineHelpText>Authorisation code of the presenter to pay by Account</inlineHelpText>
        <label>Account authorisation code for presenter</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>AccountNumber__c</fullName>
        <description>This field store the account number if the user pay against an account</description>
        <inlineHelpText>Account number of the user transaction</inlineHelpText>
        <label>Account Number</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>AmendmentHistory__c</fullName>
        <inlineHelpText>Usage : add your name and the reason why you are amending this record.</inlineHelpText>
        <label>Amendment History</label>
        <length>10000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ApplicationBaseURL__c</fullName>
        <label>ApplicationBaseURL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>ApplicationDate__c</fullName>
        <label>ApplicationDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Barcode__c</fullName>
        <description>Represents the barcode of the transaction received from CHIPS</description>
        <label>Barcode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CompanyAddress1__c</fullName>
        <description>Represents the company Address 1 from CHIPS</description>
        <label>Company Address 1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CompanyAddress2__c</fullName>
        <description>Represents the company Address 2 from CHIPS</description>
        <label>Company Address 2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CompanyCountry__c</fullName>
        <description>Represents the Country of the Company</description>
        <label>Company Country</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CompanyIncorporationDate__c</fullName>
        <description>This represents the date of incorporation of the company</description>
        <label>Company Incorporation Date</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CompanyLocality__c</fullName>
        <description>Represents the Company locality</description>
        <label>Company Locality</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CompanyName__c</fullName>
        <label>Company Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CompanyNumber__c</fullName>
        <label>Company Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CompanyPostCode__c</fullName>
        <description>Represents the Postcode of a Company</description>
        <label>Company PostCode</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CompanyRegion__c</fullName>
        <description>Represents the Region of a Company</description>
        <label>Company Region</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CompanyStatus__c</fullName>
        <description>This represents the status of the Company</description>
        <label>Company Status</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CompanyType__c</fullName>
        <description>This represents the type of the company.</description>
        <label>Company Type</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Transaction (Company)</relationshipLabel>
        <relationshipName>Transaction_Company</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ContactEmail__c</fullName>
        <description>Presenter Contact information for notifications</description>
        <label>Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>CreatedDateUnitTest__c</fullName>
        <description>This field is used only for unit testing the TransactionRecordsDeletionBatch</description>
        <inlineHelpText>This field is used only for unit testing the TransactionRecordsDeletionBatch</inlineHelpText>
        <label>CreatedDateUnitTest</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DownloadLink__c</fullName>
        <description>Link to download your attachment with authentication</description>
        <label>DownloadLink</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>ErrorDescription__c</fullName>
        <inlineHelpText>API call errors will be presented here</inlineHelpText>
        <label>Error Description</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ExpiryDate__c</fullName>
        <description>Date of Expiry calculated from Custom meta data automatically. This is the period between sending a document and the actual signing of the document(s)</description>
        <label>ExpiryDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ExpirySEnt__c</fullName>
        <defaultValue>false</defaultValue>
        <description>expiry email sent and okay to set to inactive and/or delete file</description>
        <label>ExpirySEnt</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Expiry_Date_Length__c</fullName>
        <label>Expiry Date Length</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Form_Name__c</fullName>
        <label>Form Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Historical_Valid_Step_Ids__c</fullName>
        <label>Historical Valid Step Ids</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>InActiveTransaction__c</fullName>
        <defaultValue>false</defaultValue>
        <label>InActiveTransaction</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MultipleDirectors__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If the transaction requires multiple directors</description>
        <label>MultipleDirectors</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OfficerCount__c</fullName>
        <label>OfficerCount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PresenterName__c</fullName>
        <label>PresenterName</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PresenterPhoneNumber__c</fullName>
        <label>PresenterPhoneNumber</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Presenter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Presenter</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Transaction (Presenter)</relationshipLabel>
        <relationshipName>Transaction_Presented</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Code__c</fullName>
        <description>For the finance reconciliation report</description>
        <label>Product Code</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RequiredOfficerSign__c</fullName>
        <formula>IF(        isMajorityRequired__c           ,IF(OfficerCount__c &gt; 2, ((IF(MOD(OfficerCount__c,2)=0, OfficerCount__c, OfficerCount__c-1)/2)+1), OfficerCount__c), 1 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RequiredOfficerSign</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ReviewRedirect__c</fullName>
        <description>URL Redirect field to be sent to Presenter once transaction has been set to signed (note this is currently for multiple directors only).
Developer note: This is the encrypted C value parameter to be added as a merged field in the Email correspondence</description>
        <label>ReviewRedirect</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SentreviewURL__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SentreviewURL</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Session_Log__c</fullName>
        <description>Field used for the session log creation expiration</description>
        <inlineHelpText>Field used for the session log creation expiration</inlineHelpText>
        <label>Session Log</label>
        <length>130000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>SignerStatus__c</fullName>
        <label>SignerStatus</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>SoleDirectorPresenter__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to control the flow if the presenter is a sole director.</description>
        <inlineHelpText>DO NOT TOUCH USED IN THE BACK END</inlineHelpText>
        <label>SoleDirectorPresenter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Draft</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Signed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Payment pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submission pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accepted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Declined</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Signatures</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Error</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SubmissionId__c</fullName>
        <externalId>true</externalId>
        <label>Submission Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>TransactionPath__c</fullName>
        <description>Path Back to beginning of Transaction with Transaction Type</description>
        <label>TransactionPath</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transaction_Type__c</fullName>
        <label>Transaction Type</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Valid_Step_Ids__c</fullName>
        <description>Pipe delimited list of Step Ids up to the current and next Step only.</description>
        <inlineHelpText>Pipe delimited list of Step Ids up to the current and next Step only.</inlineHelpText>
        <label>Valid Step Ids</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Version_Form__c</fullName>
        <description>Represent the version of the form</description>
        <label>Version Form</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>containsPackage__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Denotes that a particular transactions contains multiple transactions as attachments to be turned into packages upon submission</description>
        <label>containsPackage</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>errorsMessage__c</fullName>
        <label>errorsMessage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>errors__c</fullName>
        <defaultValue>false</defaultValue>
        <label>errors</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>finishedAddingShares__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Boolean to set once Shares are finished to bypass the Adding Shares Table and call the next Step</description>
        <label>finishedAddingShares</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>finishedAttachments__c</fullName>
        <defaultValue>false</defaultValue>
        <label>finishedAttachments</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>finishedPart1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>finishedPart1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>hasPaid__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to notify the transaction has been paid.</description>
        <inlineHelpText>DO NOT TOUCH THIS FIELD. FIELD USED BY CODE</inlineHelpText>
        <label>Has paid?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>hasPromoter__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If selected  the user will fill out the promoter page in the next step</description>
        <inlineHelpText>Has any amount or benefit been paid or given or is intended to be paid or given
to any promoter of the company?</inlineHelpText>
        <label>hasPromoter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isBehalfSignatoryEnable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to control if we will display the flow of behalf signature selection and input screen</description>
        <inlineHelpText>TO NO TOUCH THIS FIELD BACK END FIELD ONLY</inlineHelpText>
        <label>is behalf signatory enable?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isDigitalSignatureNeeded__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field show if the form contains a digital signature</description>
        <inlineHelpText>Property checked if the form - transaction need to be signed digitally</inlineHelpText>
        <label>is digital signature needed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isLLP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isLLP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isLP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>is LP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isLtdPlc__c</fullName>
        <defaultValue>false</defaultValue>
        <label>is Ltd Plc</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isMajorityRequired__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isMajorityRequired?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isPaymentAccount__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field mark is the transaction will require to load the account through the JSON</description>
        <inlineHelpText>DO NOT TOUCH THIS FIELD USED BY CODE TO CONTROL ACCOUNT PAYMENT</inlineHelpText>
        <label>is paying against an Account?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isPaymentCard__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This value of this field represents if the user has paid using card</description>
        <inlineHelpText>DO NOT TOUCH THIS FIELD BACK END ONLY</inlineHelpText>
        <label>is paying against an Card?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isPaymentPaypal__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field mark if the transaction will require to load the paypal through the JSON</description>
        <inlineHelpText>DO NOT TOUCH THIS FIELD USED BY CODE TO CONTROL PAYPAL PAYMENT</inlineHelpText>
        <label>is paying against an Paypal?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isPaymentRequired__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This checkbox is used to acknowledge if a payment is required.</description>
        <inlineHelpText>Populated automatically by code. DO NOT TOUCH</inlineHelpText>
        <label>is payment required?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isPresenterMultipleDirectors__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to mark the transaction if the user answer to the question are you a director and if there is more than 1 director</description>
        <inlineHelpText>DO NOT TOUCH THIS FIELD, BACK END ONLY</inlineHelpText>
        <label>is Presenter Multiple Director?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isReviewTrigger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isReviewTrigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isSameDayProcessing__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field mark if the user has paid the extra to make Companies House processing the transaction on the same day</description>
        <inlineHelpText>DO NOT TOUCH THIS FIELD, USED BY THE CODE IN THE APPLICATION.</inlineHelpText>
        <label>is same day processing?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isSigningFinished__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field shows if the transaction has finished with signing</description>
        <inlineHelpText>If checked then signing process is finished</inlineHelpText>
        <label>is signing finished</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isSigningStarted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field shows if the transaction has started a signing ceremony</description>
        <inlineHelpText>Property showing if the transaction is awaiting signature</inlineHelpText>
        <label>is signing started?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isSignout__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isSignout</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>officerTerminology__c</fullName>
        <label>Officer Terminology</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>paymentDate__c</fullName>
        <label>paymentDate</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>paymentReference__c</fullName>
        <externalId>true</externalId>
        <label>payment reference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>prescribedParticular__c</fullName>
        <label>prescribedParticular</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>selectShareType__c</fullName>
        <label>selectShareType</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sentsignerstatus__c</fullName>
        <defaultValue>false</defaultValue>
        <label>sentsignerstatus</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>shareChangeSelection__c</fullName>
        <label>shareChangeSelection</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>shareClassSelection__c</fullName>
        <label>shareClassSelection</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sharecurrencyselection__c</fullName>
        <label>sharecurrencyselection</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>submissionDate__c</fullName>
        <label>submissionDate</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>submissionTime__c</fullName>
        <label>submissionTime</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>trueTransactionName__c</fullName>
        <description>Transaction Name for group transaction processes (e.g. SH05_6_7 need to be submitted as standalone SH05 or SH06, etc. This value will be used on submission for the transaction type. If no value is given then the transaction type will not be changed.</description>
        <label>trueTransactionName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>validateEmailFormat__c</fullName>
        <label>validateEmailFormat</label>
        <type>Email</type>
    </fields>
    <label>Transaction</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Transaction_Type__c</columns>
        <columns>CompanyName__c</columns>
        <columns>Status__c</columns>
        <columns>ContactEmail__c</columns>
        <columns>Barcode__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>LAST_ACTIVITY</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Fluffy_Find</fullName>
        <columns>NAME</columns>
        <columns>CompanyName__c</columns>
        <columns>CompanyNumber__c</columns>
        <columns>Barcode__c</columns>
        <columns>Status__c</columns>
        <columns>ErrorDescription__c</columns>
        <columns>ContactEmail__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CompanyNumber__c</field>
            <operation>equals</operation>
            <value>08778602</value>
        </filters>
        <label>Fluffy_Find</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>SUB{0000}</displayFormat>
        <label>Transaction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Transactions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>